<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/ic_background2">


    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Scavenger Hunt"
        android:textSize="36sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"/>


    <EditText
        android:id="@+id/userName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/hint_user"
        android:textColorHint="#676565"
        android:inputType="textPersonName"
        android:background="@drawable/custom_input"
        android:drawableEnd="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:padding="8dp"
        android:textSize="14sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:textColorHint="#676565"
        android:layout_below="@+id/userName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        android:drawableEnd="@drawable/ic_lock"
        android:drawablePadding="12dp"
        android:padding="8dp"
        android:textSize="14sp"
        android:textColor="@color/black"/>


    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/white"
        android:textColor="@color/custom_pink"/>

    <TextView
        android:id="@+id/linkRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submit"
        android:text="Don't have An Account? Register"
        android:textColor="#978fa6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>


</RelativeLayout>